--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "dev": "node src/bin/www | bunyan"
   },
   "dependencies": {
+    "async": "^3.1.0",
     "body-parser": "1.13.2",
     "bunyan": "1.5.1",
     "cookie-parser": "1.3.5",
     "express": "4.13.1",
-    "express-body-schema": "*",
-    "mongoose": "*",
+    "express-body-schema": "github:Synpheros/express-body-schema#master",
+    "mongoose": "^5.7.8",
     "node-yaml-config": "0.0.3",
+    "request": "*",
     "swagger-mongoose": "github:Synpheros/swagger-mongoose#master",
-    "yaml": "*"
+    "yaml": "^1.7.2"
   }
 }
