--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "async": "^3.1.0",
+    "bcrypt": "2.*",
     "body-parser": "1.13.2",
     "bunyan": "1.5.1",
     "cookie-parser": "1.3.5",
     "express": "4.13.1",
     "express-body-schema": "github:Synpheros/express-body-schema#master",
+    "jsonwebtoken": "*",
     "mongoose": "^5.7.8",
     "node-yaml-config": "0.0.3",
     "request": "*",
