--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "async": "^3.1.0",
-    "bcrypt": "2.*",
+    "bcrypt": "3.0.x",
     "body-parser": "1.13.2",
     "bunyan": "1.5.1",
     "cookie-parser": "1.3.5",
@@ -18,6 +18,7 @@
     "mongoose": "^5.7.8",
     "node-yaml-config": "0.0.3",
     "request": "*",
+    "ssl-root-cas": "1.3.x",
     "swagger-mongoose": "github:Synpheros/swagger-mongoose#master",
     "yaml": "^1.7.2"
   }
