--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node src/bin/www",
-    "dev": "node src/bin/www | bunyan"
+    "dev": "node src/bin/www | bunyan",
+    "test": "set NODE_ENV=test&& mocha -R spec"
   },
   "dependencies": {
     "async": "^3.1.0",
@@ -21,5 +22,10 @@
     "ssl-root-cas": "1.3.x",
     "swagger-mongoose": "github:Synpheros/swagger-mongoose#master",
     "yaml": "^1.7.2"
+  },
+  "devDependencies": {
+    "mocha": "*",
+    "should": "*",
+    "supertest": "*"
   }
 }
