--- a/api.yaml
+++ b/api.yaml
@@ -893,9 +893,18 @@ paths:
             type: string
             example: "5d07a0767c1405004bc702af"
           description: The test ID
+        - in: query
+          name: users
+          description: |
+            the list of users comma separated or none for all
+            (if logged in student , user is not needed)
+          schema:
+            type: string
+            format: 'user1,user2,user3'
     post:
       tags:
         - teachers
+        - students
       summary: sets the completion status of the activity
       operationId: setCompletion
       description: |
@@ -917,7 +926,72 @@ paths:
           description: The test ID
         - in: query
           name: user
-          description: the user to check its completion status
+          description: |
+            the user to get its completion status
+            (if logged in student , user is not needed)
+          schema:
+            type: string
+            format: 'user1'
+  /activities/{id}/result:
+    get:
+      tags:
+        - teachers
+        - students
+      summary: gets the results of the activity
+      operationId: getResult
+      description: |
+        Obtains the completion status of the activity
+      responses:
+        '200':
+          description: the result of the students required
+        '400':
+          description: 'ID is not a valid ObjectId'
+        '404':
+          description: 'Not found'
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+            example: "5d07a0767c1405004bc702af"
+          description: The test ID
+        - in: query
+          name: users
+          description: |
+            the list of users comma separated or none for all
+            (if logged in student , user is not needed)
+          schema:
+            type: string
+            format: 'user1,user2,user3'
+    post:
+      tags:
+        - teachers
+        - students
+      summary: sets the result for the activity
+      operationId: setCompletion
+      description: |
+        Set the completion status of the activity for a student
+      responses:
+        '200':
+          description: if it is openable or not
+        '400':
+          description: 'ID is not a valid ObjectId'
+        '404':
+          description: 'Not found'
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+            example: "5d07a0767c1405004bc702af"
+          description: The test ID
+        - in: query
+          name: user
+          description: |
+            the user to set its result
+            (if logged in student , user is not needed)
           schema:
             type: string
             format: 'user1'
