Now User role is checked when accessing simva - closes #21 - closes #13

--- a/api.yaml
+++ b/api.yaml
@@ -391,6 +391,7 @@ paths:
   /studies/{id}/schedule:
     get:
       tags:
+        - teachers
         - students
       summary: gets the list of scheduled activities for the student
       operationId: getSchedule
