--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
     volumes:
       - mongo_data:/data/db
     hostname: mongo.simva.dev.test
+    ports:
+      - 27017:27017
 
   simva-api:
     image: node:8
