--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "1.3.5",
     "express": "4.13.1",
     "express-body-schema": "github:Synpheros/express-body-schema#master",
+    "html-pdf": "*",
     "jsonwebtoken": "*",
     "mongoose": "^5.7.8",
     "node-yaml-config": "0.0.3",
