--- a/api.yaml
+++ b/api.yaml
@@ -1066,6 +1066,39 @@ paths:
           schema:
             type: string
             format: 'user1'
+  /activities/{id}/hasresult:
+    get:
+      tags:
+        - teachers
+        - students
+      summary: gets true if has results of the activity
+      operationId: getResult
+      description: |
+        Obtains true or false depending on if the user have results
+        or not for the activity.
+      responses:
+        '200':
+          description: true or false depending on if has or not results
+        '400':
+          description: 'ID is not a valid ObjectId'
+        '404':
+          description: 'Not found'
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+            example: "5d07a0767c1405004bc702af"
+          description: The activity ID
+        - in: query
+          name: users
+          description: |
+            the list of users comma separated or none for all
+            (if logged in student , user is not needed)
+          schema:
+            type: string
+            format: 'user1,user2,user3'
   /activitytypes:
     get:
       tags:
