--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "request": "*",
     "ssl-root-cas": "1.3.x",
     "swagger-mongoose": "github:Synpheros/swagger-mongoose#master",
+    "xapi-tracker": "*",
     "yaml": "^1.7.2"
   },
   "devDependencies": {
