--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-body-schema": "github:Synpheros/express-body-schema#master",
     "html-pdf": "*",
     "jsonwebtoken": "*",
+    "kafka-node": "*",
     "mongoose": "^5.7.8",
     "node-yaml-config": "0.0.3",
     "request": "*",
